--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,7 @@
 [
     {
         "title": "یادگیری پایتون",
-        "completed": false
+        "completed": true
     },
     {
         "title": "تسک آزمایشی 1",
