Add task editing feature

--- a/tasks.json
+++ b/tasks.json
@@ -5,7 +5,7 @@
         "created_at": "2025-05-31 14:12:46"
     },
     {
-        "title": "تسک آزمایشی 1",
+        "title": "تسک تست",
         "completed": false,
         "created_at": "2025-05-31 14:12:59"
     },
