feat: Improve UX and Application Stability - Enhance task list management: Preserve sorting order after operations and add direct task creation from list view. - Implement unique task IDs (UUIDs) for robust task identification and operations. - Add comprehensive error handling for task file loading (tasks.json), preventing crashes. - Minor UI refinements and code readability improvements.

--- a/tasks.json
+++ b/tasks.json
@@ -1,17 +1,26 @@
 [
     {
-        "title": "یادگیری پایتون",
+        "id": "8005b11d-ada4-4c5e-bd2f-ec7c4e4feaed",
+        "title": "يادگيري پايتون",
         "completed": true,
-        "created_at": "2025-05-31 14:12:46"
+        "created_at": "2025-06-03 11:14:10"
     },
     {
-        "title": "تسک تست",
+        "id": "908f8a6c-f8cc-47e5-a95c-c139b4d7965b",
+        "title": "تسک آزمايشي",
         "completed": false,
-        "created_at": "2025-05-31 14:12:59"
+        "created_at": "2025-06-03 11:14:18"
     },
     {
-        "title": "تسک آزمایشی 2",
+        "id": "9176607d-1d39-4481-aba5-08b2e60a8f2f",
+        "title": "تسک آزمايشي 2",
         "completed": false,
-        "created_at": "2025-05-31 14:13:09"
+        "created_at": "2025-06-03 11:16:39"
+    },
+    {
+        "id": "0fa730f7-5bea-4a5e-b32c-93a8294e42bf",
+        "title": "تسک آزمايشي 3",
+        "completed": false,
+        "created_at": "2025-06-03 11:16:51"
     }
 ]
